# mctl

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  committed.toml  release-please-config.json  release-plz.toml
.copr/: Makefile
.github/workflows/: check.yaml  ci.yaml  common.yaml  nostd.yaml  publish.yaml  release-please.yml  rpm-check.yaml  rpm-release.yaml  safety.yaml  test.yaml
assets/: test.key.txt  test.recipients.2.txt  test.recipients.txt
rpm/: Makefile  build.sh  rust-mctl.spec
scripts/: build-rpm.sh
scripts/ci/: check-for-publish.sh  coverage.sh
src/: cli.rs  config.rs  lib.rs  main.rs  secret.rs  sync.rs  util.rs
src/sync/: mod.rs  services.rs
