[package]
name = "mctl"
version = "0.2.3"
edition = "2024"
description = "Cli to manage machines and configurations"
readme = "README.md"
repository = "https://github.com/joshuachp/mctl"
license = "MIT OR APACHE-2.0"
keywords = ["cli", "deploy"]
categories = ["command-line-utilities"]

[dependencies]
age = { version = "0.11.3", features = ["armor"] }
blake3 = { version = "1.8.5", features = ["zeroize"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.4"
clap_mangen = "0.3.0"
color-eyre = "0.6.5"
config = { version = "0.15.22", default-features = false, features = ["toml"] }
dirs = "6.0.0"
eyre = "0.6.12"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeroize = "1.8.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
